--- a/css/main.css
+++ b/css/main.css
@@ -25,7 +25,7 @@ textarea {
 
 .header-bg {
   background: black;
-  background: linear-gradient(75deg, rgba(0, 0, 0, 0.7) 0%, rgba(0, 0, 0, 0.7) 100%), url(../img/header-bg.jpg);
+  background: linear-gradient(75deg, rgba(0, 0, 0, 0.7) 0%, rgba(0, 0, 0, 0.7) 100%), url(../img/header-bg.webp);
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
@@ -34,6 +34,7 @@ textarea {
 
 .header__main {
   max-width: 80%;
+  margin: 50px auto;
   margin: 25px auto 0;
 }
 
@@ -571,6 +572,12 @@ textarea {
   color: #fff;
   border-radius: 8px;
   font-size: 13px;
+  -webkit-transition: all 0.5s ease;
+  transition: all 0.5s ease;
+}
+
+.project__card--cta:hover, .project__card--cta:focus {
+  background-color: #2668a5;
 }
 
 @media screen and (min-width: 768px) {
@@ -795,12 +802,40 @@ textarea {
   background-color: #3895EA;
   border-bottom-left-radius: 8px;
   border-bottom-right-radius: 8px;
+  -webkit-transition: all 0.5s ease;
+  transition: all 0.5s ease;
+  cursor: pointer;
+}
+
+.retos__body--item-bottom:hover, .retos__body--item-bottom:focus {
+  background-color: #2668a5;
 }
 
 .retos__body--item-bottom-cta {
   text-decoration: none;
   text-transform: uppercase;
   color: #fff;
+}
+
+.retos__body--item-header {
+  position: relative;
+}
+
+.retos__body--item-cta {
+  position: absolute;
+  top: 0;
+  right: 0;
+  background-color: #3895EA;
+  color: #fff;
+  padding: 8px 12px;
+  border-top-right-radius: 8px;
+  border-bottom-left-radius: 8px;
+  -webkit-transition: all 0.5s ease;
+  transition: all 0.5s ease;
+}
+
+.retos__body--item-cta:hover, .retos__body--item-cta:focus {
+  background-color: #2668a5;
 }
 
 @media screen and (min-width: 768px) {
@@ -911,7 +946,7 @@ textarea {
 
 .contacto-bg {
   background: black;
-  background: linear-gradient(75deg, rgba(0, 0, 0, 0.7) 0%, rgba(0, 0, 0, 0.7) 100%), url(../img/contacto-bg.jpg);
+  background: linear-gradient(75deg, rgba(0, 0, 0, 0.7) 0%, rgba(0, 0, 0, 0.7) 100%), url(../img/contacto-bg.webp);
   background-repeat: no-repeat;
   background-size: cover;
   width: 100%;
@@ -977,6 +1012,10 @@ textarea {
   outline: 1px solid #3895EA;
 }
 
+.contacto__formulario--input:hover, .contacto__formulario--input:focus {
+  outline: 1px solid #2668a5;
+}
+
 .contacto__formulario--txt {
   width: 100%;
   height: 80px;
@@ -985,6 +1024,10 @@ textarea {
   border: none;
   outline: 1px solid #3895EA;
   resize: none;
+}
+
+.contacto__formulario--txt:hover, .contacto__formulario--txt:focus {
+  outline: 1px solid #2668a5;
 }
 
 .contacto__formulario--bottom {
@@ -1001,6 +1044,12 @@ textarea {
   border-bottom-left-radius: 8px;
   border-bottom-right-radius: 8px;
   cursor: pointer;
+  -webkit-transition: all 0.5s ease;
+  transition: all 0.5s ease;
+}
+
+.contacto__formulario--btn:hover, .contacto__formulario--btn:focus {
+  background-color: #2668a5;
 }
 
 @media screen and (min-width: 768px) {
@@ -1069,7 +1118,7 @@ textarea {
 }
 
 .footer__aside--cta i:hover, .footer__aside--cta i:focus {
-  background-color: #3894ea71;
+  background-color: #2668a5;
 }
 
 .footer__aside--cta:nth-child(1) i {
