--- a/scss/main.scss
+++ b/scss/main.scss
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;700&family=Poppins:wght@100;200;300;400;500;600;700;800;900&display=swap');
+@import 'mixin';
 
 * {
     margin: 0;
@@ -6,6 +7,9 @@
     box-sizing: border-box;
     scroll-behavior: smooth;
 }
+
+$skyblue: #3895EA;
+$hover-skyblue:#2668a5;
 
 body {
     /* font-family: 'Open Sans', sans-serif; */
@@ -26,7 +30,7 @@ textarea {
         background: rgb(0, 0, 0);
         background:
             linear-gradient(75deg, rgba(0, 0, 0, 0.7) 0%, rgba(0, 0, 0, 0.7) 100%),
-            url(../img/header-bg.jpg);
+            url(../img/header-bg.webp);
         background-repeat: no-repeat;
         background-size: cover;
         background-position: center;
@@ -34,7 +38,7 @@ textarea {
     }
 
     &__main {
-        max-width: 80%;
+        @include content-max-width;
         margin: 25px auto 0;
     }
 
@@ -70,7 +74,7 @@ textarea {
         top: 0;
         left: -900px;
         z-index: 9999;
-        background-color: #3895EA;
+        background-color: $skyblue;
         width: 100%;
         height: 100%;
         transition: 1s;
@@ -179,7 +183,7 @@ textarea {
                 top: 50%;
                 left: 50%;
                 transform: translate(-50%, -50%);
-                background-color: #3895EA;
+                background-color:$skyblue;
                 filter: blur(1.5rem);
                 width: 100%;
                 height: 200px;
@@ -224,7 +228,7 @@ textarea {
             &:hover,
             &:focus {
                 background-color: #fff;
-                color: #3895EA;
+                color: $skyblue;
             }
         }
     }
@@ -291,8 +295,7 @@ textarea {
     padding: 0.1px;
 
     &__main {
-        max-width: 80%;
-        margin: 50px auto;
+      @include content-max-width;
     }
 
     &__header {
@@ -303,7 +306,7 @@ textarea {
 
         &--secondheading {
             font-size: 32px;
-            color: #3895EA;
+            color: $skyblue;
         }
     }
 
@@ -353,8 +356,7 @@ textarea {
     padding: 0.1px;
 
     &__main {
-        max-width: 80%;
-        margin: 50px auto;
+        @include content-max-width;
     }
 
     &__header {
@@ -366,7 +368,7 @@ textarea {
         &--secondheading {
             text-transform: capitalize;
             font-size: 32px;
-            color: #3895EA;
+            color: $skyblue;
         }
     }
 
@@ -444,7 +446,7 @@ textarea {
 
         &--middleheading {
             text-transform: uppercase;
-            color: #3895EA;
+            color: $skyblue;
             font-size: 25px;
         }
 
@@ -480,10 +482,16 @@ textarea {
             width: 200px;
             height: 45px;
             line-height: 45px;
-            background-color: #3895EA;
+            background-color: $skyblue;
             color: #fff;
             border-radius: 8px;
             font-size: 13px;
+            transition:all 0.5s ease;
+
+            &:hover,
+            &:focus{
+                background-color: $hover-skyblue;
+            }
         }
     }
 
@@ -509,8 +517,7 @@ textarea {
     padding: 0.1px;
 
     &__main {
-        max-width: 80%;
-        margin: 50px auto;
+        @include content-max-width;
     }
 
     &__header {
@@ -524,7 +531,7 @@ textarea {
         &--secondheading {
             text-transform: capitalize;
             font-size: 28px;
-            color: #3895EA;
+            color: $skyblue;
         }
     }
 
@@ -544,7 +551,7 @@ textarea {
         /* ITEM #1 */
         &--banner {
             grid-area: banner;
-            background-color: #3895EA;
+            background-color: $skyblue;
             padding: 20px;
             border-bottom-left-radius: 32px;
             border-top-right-radius: 32px;
@@ -618,7 +625,7 @@ textarea {
             &-smallheading {
                 text-transform: capitalize;
                 text-align: center;
-                color: #3895EA;
+                color: $skyblue;
             }
 
             &-code {
@@ -652,14 +659,42 @@ textarea {
                 justify-content: center;
                 align-items: center;
                 padding: 20px;
-                background-color: #3895EA;
+                background-color: $skyblue;
                 border-bottom-left-radius: 8px;
                 border-bottom-right-radius: 8px;
+                transition:all 0.5s ease;
+                cursor:pointer;
+
+                &:hover,
+                &:focus{
+                    background-color: $hover-skyblue;
+                }
 
                 &-cta {
                     text-decoration: none;
                     text-transform: uppercase;
                     color: #fff;
+                }
+            }
+
+            &-header{
+                position:relative;
+            }
+
+            &-cta{
+                position:absolute;
+                top:0;
+                right:0;
+                background-color: $skyblue;
+                color:#fff;
+                padding:8px 12px;
+                border-top-right-radius: 8px;
+                border-bottom-left-radius: 8px;
+                transition: all 0.5s ease;
+
+                &:hover,
+                &:focus{
+                    background-color: $hover-skyblue;
                 }
             }
         }
@@ -764,15 +799,14 @@ textarea {
         background: rgb(0, 0, 0);
         background:
             linear-gradient(75deg, rgba(0, 0, 0, 0.7) 0%, rgba(0, 0, 0, 0.7) 100%),
-            url(../img/contacto-bg.jpg);
+            url(../img/contacto-bg.webp);
         background-repeat: no-repeat;
         background-size: cover;
         width: 100%;
     }
 
     &__main {
-        max-width: 80%;
-        margin: 50px auto;
+        @include content-max-width;
     }
 
     &__header {
@@ -786,7 +820,7 @@ textarea {
         &--secondheading {
             text-transform: capitalize;
             font-size: 28px;
-            color: #3895EA;
+            color: $skyblue;
         }
     }
 
@@ -812,7 +846,12 @@ textarea {
             padding: 20px;
             border-radius: 12px;
             border: none;
-            outline: 1px solid #3895EA;
+            outline: 1px solid $skyblue;
+
+            &:hover,
+            &:focus{
+                outline:1px solid $hover-skyblue;
+            }
         }
 
         &--txt {
@@ -821,8 +860,13 @@ textarea {
             padding: 10px 20px;
             border-radius: 12px;
             border: none;
-            outline: 1px solid #3895EA;
+            outline: 1px solid $skyblue;
             resize: none;
+
+            &:hover,
+                &:focus {
+                    outline: 1px solid $hover-skyblue;
+                }
         }
 
         &--bottom {
@@ -830,7 +874,7 @@ textarea {
         }
 
         &--btn {
-            background-color: #3895EA;
+            background-color: $skyblue;
             width: 100%;
             height: 50px;
             text-transform: uppercase;
@@ -839,6 +883,12 @@ textarea {
             border-bottom-left-radius: 8px;
             border-bottom-right-radius: 8px;
             cursor: pointer;
+            transition:all 0.5s ease;
+
+            &:hover,
+            &:focus{
+                background-color: $hover-skyblue;
+            }
         }
     }
 
@@ -862,8 +912,7 @@ textarea {
     background-color: #1E2B38;
 
     &__main {
-        max-width: 80%;
-        margin: 50px auto;
+        @include content-max-width;
         display: flex;
         flex-direction: column;
         justify-content: center;
@@ -895,7 +944,7 @@ textarea {
 
             &:hover,
             &:focus {
-                background-color: #3894ea71;
+                background-color: $hover-skyblue;
             }
         }
 
