reemplazando reto por reto con bootstrap

--- a/css/main.css
+++ b/css/main.css
@@ -784,6 +784,10 @@ textarea {
   color: #D88CB1;
 }
 
+.retos__body--item-bootstrap {
+  color: #7410F0;
+}
+
 .retos__body--item-js {
   color: #F7E018;
 }
