--- a/scss/main.scss
+++ b/scss/main.scss
@@ -650,6 +650,10 @@ textarea {
                 color: #D88CB1;
             }
 
+            &-bootstrap{
+                color: #7410F0;
+            }
+
             &-js {
                 color: #F7E018;
             }
