--- a/css/main.css
+++ b/css/main.css
@@ -19,13 +19,56 @@ textarea {
   font-size: 15px;
 }
 
+.floating--btn {
+  position: fixed;
+  bottom: 50px;
+  right: 30px;
+  cursor: pointer;
+  /* background-color: $skyblue; */
+  border-radius: 32px;
+  width: 32px;
+  height: 32px;
+  opacity: 0;
+  -webkit-transition: 1s;
+  transition: 1s;
+}
+
+.floating--btn.sticky {
+  opacity: 1;
+}
+
+.floating--btn::before {
+  content: '';
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  width: 35px;
+  height: 35px;
+  background-color: rgba(180, 180, 180, 0.232);
+  border-radius: 32px;
+  z-index: -1;
+  -webkit-transform: translateY(8px);
+          transform: translateY(8px);
+}
+
+.floating--btn i {
+  color: #3895EA;
+  font-size: 35px;
+  -webkit-transition: 1s;
+  transition: 1s;
+}
+
+.floating--btn i:hover, .floating--btn i:focus {
+  color: #2668a5;
+}
+
 .header {
   padding: 0.1px;
 }
 
 .header-bg {
   background: black;
-  background: linear-gradient(75deg, rgba(0, 0, 0, 0.7) 0%, rgba(0, 0, 0, 0.7) 100%), url(../img/header-bg.webp);
+  background: linear-gradient(75deg, rgba(0, 0, 0, 0.7) 0%, rgba(0, 0, 0, 0.7) 100%), url(../img/header-bg.avif);
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
@@ -314,6 +357,7 @@ textarea {
 
 .about {
   padding: 0.1px;
+  overflow-x: hidden;
 }
 
 .about__main {
@@ -396,6 +440,7 @@ textarea {
 .project {
   background-color: #e5e5e5;
   padding: 0.1px;
+  overflow-x: hidden;
 }
 
 .project__main {
@@ -600,6 +645,7 @@ textarea {
 
 .retos {
   padding: 0.1px;
+  overflow: hidden;
 }
 
 .retos__main {
@@ -949,11 +995,12 @@ textarea {
 
 .contacto {
   padding: 0.1px;
+  overflow-x: hidden;
 }
 
 .contacto-bg {
   background: black;
-  background: linear-gradient(75deg, rgba(0, 0, 0, 0.7) 0%, rgba(0, 0, 0, 0.7) 100%), url(../img/contacto-bg.webp);
+  background: linear-gradient(75deg, rgba(0, 0, 0, 0.7) 0%, rgba(0, 0, 0, 0.7) 100%), url(../img/contacto-bg.avif);
   background-repeat: no-repeat;
   background-size: cover;
   width: 100%;
