--- a/css/main.css
+++ b/css/main.css
@@ -440,7 +440,7 @@ textarea {
 .project {
   background-color: #e5e5e5;
   padding: 0.1px;
-  overflow-x: hidden;
+  overflow: hidden;
 }
 
 .project__main {
